Add spinning servo to MainTeleOp

--- a/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Todo.txt
+++ b/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Todo.txt
@@ -1,5 +1,4 @@
- - Webcam on servo
- - Synchro cockblocker
  - Fix wheel PID
  - Fix flywheel PID
  - Add more balls to auto
+ - Clean auto code the fuck up
